# cpp-lazy

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  xmake.lua
.github/workflows/: apple-clang.yml  ci.yml  clang.yml  codeql.yml  examples.yml  gcc.yml  make-release.yml  module-tests.yml  msvc.yml
bench/: CMakeLists.txt  bar_chart_maker.py  benchmarks-iterators.cpp
bench/lz/: CMakeLists.txt  compile-times.cpp
bench/std/: CMakeLists.txt  compile-times.cpp
cmake/: cpp-lazy.pc.in  cpp-lazyConfig.cmake  cpp-lazyConfig.cmake.in
examples/: CMakeLists.txt  CartesianProduct.cpp  ChunkIf.cpp  Chunks.cpp  Map.cpp  algorithm.cpp  any_iterable.cpp  as_iterator.cpp  basic_iterable.cpp  c_string.cpp  cached_reverse.cpp  cached_size.cpp  cartesian_product.cpp  chain.cpp  chain_tmp.cpp  chunk_if.cpp  chunks.cpp  common.cpp  concatenate-tmp.cpp  concatenate.cpp  custom_iterator.cpp  drop.cpp  drop_while.cpp  duplicates.cpp  enumerate.cpp  except.cpp  exclude.cpp  exclusive_scan.cpp  filter.cpp  filter_tmp.cpp  flatten.cpp  flatten_tmp.cpp  generate.cpp  generate_while.cpp  group_by.cpp  inclusive_scan.cpp  interleave.cpp  intersection.cpp  iter_tools.cpp  join_where.cpp  (+25 more)
include/Lz/: Algorithm.hpp  Chunks.hpp  Concatenate.hpp  Except.hpp  Exclude.hpp  Filter.hpp  Flatten.hpp  Generate.hpp  Join.hpp  Loop.hpp  Lz.hpp  Random.hpp  Range.hpp  Take.hpp  Unique.hpp  Zip.hpp  algorithm.hpp  any_iterable.hpp  as_iterator.hpp  basic_iterable.hpp  c_string.hpp  cached_size.hpp  cartesian_product.hpp  chunk_if.hpp  chunks.hpp  common.hpp  concatenate.hpp  drop.hpp  drop_while.hpp  duplicates.hpp  enumerate.hpp  except.hpp  exclude.hpp  exclusive_scan.hpp  filter.hpp  flatten.hpp  generate.hpp  generate_while.hpp  group_by.hpp  inclusive_scan.hpp  (+30 more)
include/Lz/algorithm/: accumulate.hpp  adjacent_find.hpp  algorithm.hpp  all_of.hpp  any_of.hpp  back.hpp  back_or.hpp  binary_search.hpp  contains.hpp  copy.hpp  count.hpp  count_if.hpp  empty.hpp  ends_with.hpp  equal.hpp  find.hpp  find_if.hpp  find_if_not.hpp  find_last.hpp  find_last_if.hpp  find_last_if_not.hpp  find_last_or_default.hpp  find_last_or_default_if.hpp  find_last_or_default_if_not.hpp  find_last_or_default_not.hpp  find_or_default.hpp  find_or_default_if.hpp  for_each.hpp  for_each_while.hpp  for_each_while_n.hpp  front.hpp  front_or.hpp  has_many.hpp  has_one.hpp  index_of.hpp  index_of_if.hpp  is_sorted.hpp  lower_bound.hpp  max_element.hpp  mean.hpp  (+11 more)
include/Lz/detail/: Algorithm.hpp  Concepts.hpp  LzTools.hpp  Procs.hpp  Traits.hpp  Variant.hpp  algorithm.hpp  basic_iterable.hpp  compiler_checks.hpp  compiler_config.hpp  concepts.hpp  fake_ptr_proxy.hpp  func_container.hpp  iterator.hpp  maybe_owned.hpp  procs.hpp  ref_or_view.hpp  sentinel_with.hpp  traits.hpp  tuple_helpers.hpp  unique_ptr.hpp  variant.hpp
include/Lz/detail/adaptors/: as_iterator.hpp  c_string.hpp  cached_size.hpp  cartesian_product.hpp  chunk_if.hpp  chunks.hpp  common.hpp  concatenate.hpp  drop.hpp  drop_while.hpp  duplicates.hpp  enumerate.hpp  except.hpp  exclude.hpp  exclusive_scan.hpp  filter.hpp  flatten.hpp  fn_args_holder.hpp  generate.hpp  generate_while.hpp  group_by.hpp  inclusive_scan.hpp  interleave.hpp  interleave_longest.hpp  intersection.hpp  iter_tools.hpp  join.hpp  join_where.hpp  loop.hpp  map.hpp  pairwise.hpp  random.hpp  range.hpp  regex_split.hpp  repeat.hpp  reverse.hpp  rotate.hpp  slice.hpp  split.hpp  take.hpp  (+5 more)
include/Lz/detail/algorithm/: accumulate.hpp  adjacent_find.hpp  back.hpp  copy.hpp  count.hpp  count_if.hpp  ends_with.hpp  equal.hpp  find_if.hpp  find_last_if.hpp  for_each.hpp  for_each_while.hpp  for_each_while_n.hpp  index_of_if.hpp  is_sorted.hpp  lower_bound.hpp  max_element.hpp  mean.hpp  mismatch.hpp  partition.hpp  peek.hpp  search.hpp  starts_with.hpp  transform.hpp
include/Lz/detail/iterables/: as_iterator.hpp  c_string.hpp  cached_size.hpp  cartesian_product.hpp  chunk_if.hpp  chunks.hpp  common.hpp  concatenate.hpp  drop.hpp  drop_while.hpp  duplicates.hpp  enumerate.hpp  except.hpp  exclude.hpp  exclusive_scan.hpp  filter.hpp  flatten.hpp  generate.hpp  generate_while.hpp  group_by.hpp  inclusive_scan.hpp  interleave.hpp  interleave_longest.hpp  intersection.hpp  join.hpp  join_where.hpp  loop.hpp  map.hpp  pairwise.hpp  random.hpp  range.hpp  regex_split.hpp  repeat.hpp  reverse.hpp  rotate.hpp  split.hpp  take.hpp  take_every.hpp  take_while.hpp  unique.hpp  (+2 more)
include/Lz/detail/iterators/: any_view_helpers.hpp  as_iterator.hpp  c_string.hpp  cached_reverse.hpp  cartesian_product.hpp  chunk_if.hpp  chunks.hpp  common.hpp  concatenate.hpp  drop.hpp  drop_while.hpp  duplicates.hpp  enumerate.hpp  except.hpp  exclude.hpp  exclusive_scan.hpp  filter.hpp  flatten.hpp  generate.hpp  generate_while.hpp  group_by.hpp  inclusive_scan.hpp  interleave.hpp  join.hpp  (+19 more)
include/Lz/procs/: chain.hpp  distance.hpp  eager_size.hpp  procs.hpp  size.hpp  to.hpp
include/Lz/traits/: concepts.hpp  is_sized.hpp  iter_type.hpp  lazy_view.hpp  traits.hpp
include/Lz/util/: default_sentinel.hpp  optional.hpp  string_view.hpp  util.hpp
src/: lz.cppm
tests/: CMakeLists.txt  algorithm.cpp  any_iterable.cpp  as_iterator.cpp  c_string.cpp  cached_size.cpp  cartesian_product.cpp  chain.cpp  chunk_if.cpp  chunks.cpp  common.cpp  concatenate.cpp  cstring.cpp  duplicates.cpp  enumerate.cpp  except.cpp  exclude.cpp  exclusive_scan.cpp  filter.cpp  flatten.cpp  generate.cpp  generate_while.cpp  group_by.cpp  inclusive_scan.cpp  init.cpp  interleave.cpp  intersection.cpp  iter_tools.cpp  iterator.cpp  join.cpp  join_where.cpp  loop.cpp  map.cpp  maybe_owned.cpp  pairwise.cpp  pch.hpp  piping.cpp  random.cpp  range.cpp  ref_or_view.cpp  (+22 more)
tests/c_string/: CMakeLists.txt  c_string_forward_decl.cpp  c_string_forward_decl.hpp
tests/cpp-lazy-ut-helper/: CMakeLists.txt
tests/cpp-lazy-ut-helper/include/cpp-lazy-ut-helper/: c_string.hpp  pch.hpp  repeat.hpp  test_procs.hpp  ut_helper.hpp
tests/cpp-lazy-ut-helper/src/: c_string.cpp  repeat.cpp  ut_helper.cpp
tests/module_tests/: CMakeLists.txt  module_test.cpp
(+34 files in other folders)
